fixed chatbot visibility

--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -33,7 +33,9 @@ body {
 .tab-container {
   border-bottom: 1px solid #cccccc;
 }
-
+.logged-in-btn {
+  width: 90px;
+}
 .tab-link {
   display: inline-block;
   padding: 10px 20px 15px; /* Add additional padding to the bottom */
